syntax = "proto3";
package balance;

import "google/protobuf/empty.proto";

message Host {
    string ip = 1;
    uint32 port = 2;
}

message BalanceRequest {
    uint32 id = 1;
    oneof payload {
        google.protobuf.Empty probe = 2;
        google.protobuf.Empty ping = 3;
    }
}

message ProbeReply {
    repeated Host hosts = 1; 
}

message BalanceResponse {
    uint32 id = 1;
    oneof reply {
        ProbeReply probe = 2;
    }
}
